[build-system]
requires = ["hatchling" ,"numpy", "pandas", "igraph", "statistics"]
build-backend = "hatchling.build"

[project]
name = "stnpy"
version = "0.0.2"
authors = [
  { name="Lauren Hayward", email="hayward.lauren111@gmail.com" },
]
description = "Python port of R STN library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/runrunLauren/stnpy"
"Bug Tracker" = "https://github.com/runrunLauren/stnpy/issues"